# promail

./: .coveragerc  .flake  .flake8  .gitignore  .python-version  .readthedocs.yml  README.md  mypy.ini  noxfile.py  privacy_policy.md  pyproject.toml
.github/workflows/: coverage.yml  release-drafter.yml  release.yml  sphinx-gcs.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
promail/clients/: __init__.py  gmail.py  outlook.py
src/: settings.py
src/promail/: __init__.py  settings.py
src/promail/clients/: __init__.py  email_manager.py  gmail.py  imap_client.py  microsoft.py  outlook.py  smtp_client.py
src/promail/core/: embedded_attachments.py
src/promail/core/attachements/: attachments.py
src/promail/core/messages/: messages.py
src/promail/filters/: __init__.py  email_filter.py  gmail_filter.py  imap_filter.py
tests/: __init__.py  conftest.py  test_aws.py  test_embedded_attachments.py  test_gmail.py  test_gmail_filter.py  test_hotmail.py  test_imap_filter.py  test_outlook_client.py
